--- a/assets/css/Responsive1024px/section1.css
+++ b/assets/css/Responsive1024px/section1.css
@@ -1,5 +1,5 @@
-@media all and (max-width: 1200px) and (min-width:768px){
-/*@media all and (max-width: 1024px) {*/
+/*@media all and (max-width: 1200px) and (min-width:768px){*/
+@media all and (max-width: 1024px) and (min-width: 768px) {
 
     header nav>div>menu {
         left: -3vw;
