--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2126,7 +2126,7 @@ section:nth-child(8)>h1{
 .contact-section aside>form>fieldset{
     border: none;
     position: absolute;
-    left: 70vh;
+    left: 36vw;
     top: 37vh;
 }
 
