--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2347,230 +2347,86 @@ footer>p {
 }
 
 
+/*-----------------------------------------------loading-----------------------------------------------*/
 
 
+.pl {
+    display: block;
+    width: 6.25em;
+    height: 6.25em;
+}
+.pl__ring, .pl__ball {
+    animation: ring 2s ease-out infinite;
+}
+.pl__ball {
+    animation-name: ball;
+}
 
-/*body footer>div{*/
-/*    position: relative;*/
-/*    width: 100%;*/
-/*    height: 60vh;*/
-/*    padding-left: 5vw;*/
-/*    padding-right: 5vw;*/
-/*    box-sizing: border-box;*/
-/*    background-color: #2D2D32;*/
+/* Dark theme  */
+/*@media (prefers-color-scheme: dark) {*/
+/*    :root {*/
+/*        --bg: hsl(var(--hue),10%,10%);*/
+/*        --fg: hsl(var(--hue),10%,90%);*/
+/*    }*/
 /*}*/
 
-/*body footer div>div:nth-child(1)>h1{*/
-/*    color: #ffffff;*/
-/*    font-family: 'Catamaran';*/
-/*    font-size: 1.5em;*/
-/*    font-style: normal;*/
-/*    font-weight: 700;*/
-/*    line-height: normal;*/
-/*    position: absolute;*/
-/*    margin: auto;*/
-/*    left: 15vh;*/
-/*    top: 7vh;*/
-/*}*/
+/* Animation */
+@keyframes ring {
+    from {
+        stroke-dasharray: 0 257 0 0 1 0 0 258;
+    }
+    25% {
+        stroke-dasharray: 0 0 0 0 257 0 258 0;
+    }
+    50%, to {
+        stroke-dasharray: 0 0 0 0 0 515 0 0;
+    }
+}
+@keyframes ball {
+    from, 50% {
+        animation-timing-function: ease-in;
+        stroke-dashoffset: 1;
+    }
+    64% {
+        animation-timing-function: ease-in;
+        stroke-dashoffset: -109;
+    }
+    78% {
+        animation-timing-function: ease-in;
+        stroke-dashoffset: -145;
+    }
+    92% {
+        animation-timing-function: ease-in;
+        stroke-dashoffset: -157;
+    }
+    57%, 71%, 85%, 99%, to {
+        animation-timing-function: ease-out;
+        stroke-dashoffset: -163;
+    }
+}
 
-/*body footer div>div:nth-child(1)>p{*/
-/*    color: #FFF;*/
-/*    width: 30vh;*/
-/*    font-family: Inter, cursive;*/
-/*    font-size: 12px;*/
-/*    font-style: normal;*/
-/*    font-weight: 400;*/
-/*    line-height: normal;*/
-/*    margin: auto;*/
-/*    position: absolute;*/
-/*    top: 15vh;*/
-/*    left: 15vh;*/
-/*}*/
+.loading {
+    width: 100vw;
+    height: 100vh;
+    /*border: 1px solid white;*/
+    background: #2d2d32;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 100000;
+}
 
-/*body footer div>div:nth-child(1)>img{*/
-/*    position: absolute;*/
-/*    top: 30vh;*/
-/*    left: 20vh;*/
-/*}*/
-
-/*body footer div>div:nth-child(1)>hr{*/
-/*    position: absolute;*/
-/*    width: 0.001vh;*/
-/*    height: 45vh;*/
-/*    top: 6vh;*/
-/*    left: 32.7vw;*/
-/*}*/
-
-/*body footer div>div:nth-child(2)>h1{*/
-/*    color: #ffffff;*/
-/*    font-family: 'Catamaran';*/
-/*    font-size: 1.5em;*/
-/*    font-style: normal;*/
-/*    font-weight: 700;*/
-/*    line-height: normal;*/
-/*    position: absolute;*/
-/*    margin: auto;*/
-/*    left: 43vw;*/
-/*    top: 7vh;*/
-/*}*/
-
-/*body footer div>div:nth-child(2)>div>img:nth-child(1){*/
-/*    position: absolute;*/
-/*    top: 15vh;*/
-/*    left: 43vw;*/
-/*}*/
-
-
-/*body footer div>div:nth-child(2)>div>img:nth-child(2){*/
-/*    position: absolute;*/
-/*    top: 23vh;*/
-/*    left: 43vw;*/
-/*}*/
-
-/*body footer div>div:nth-child(2)>div>img:nth-child(3){*/
-/*    position: absolute;*/
-/*    top: 31vh;*/
-/*    left: 43vw;*/
-/*}*/
-
-/*body footer div>div:nth-child(2)>div>img:nth-child(4){*/
-/*    position: absolute;*/
-/*    top: 39vh;*/
-/*    left: 43vw;*/
-/*}*/
-
-/*body footer div>div:nth-child(2)>div>img:nth-child(5){*/
-/*    position: absolute;*/
-/*    top: 47vh;*/
-/*    left: 43vw;*/
-/*}*/
-
-/*body footer div>div:nth-child(2)>nav>ul>li:nth-child(1){*/
-/*    position: absolute;*/
-/*    color: #494949;*/
-/*    font-family: Inter;*/
-/*    font-size: 20px;*/
-/*    top: 15.5vh;*/
-/*    left: 49vw;*/
-/*}*/
-
-/*body footer div>div:nth-child(2)>nav>ul>li:nth-child(2){*/
-/*    position: absolute;*/
-/*    color: #494949;*/
-/*    font-family: Inter;*/
-/*    font-size: 20px;*/
-/*    top: 23.5vh;*/
-/*    left: 49vw;*/
-/*}*/
-
-/*body footer div>div:nth-child(2)>nav>ul>li:nth-child(3){*/
-/*    position: absolute;*/
-/*    color: #494949;*/
-/*    font-family: Inter;*/
-/*    font-size: 20px;*/
-/*    top: 31.5vh;*/
-/*    left: 49vw;*/
-/*}*/
-
-/*body footer div>div:nth-child(2)>nav>ul>li:nth-child(4){*/
-/*    position: absolute;*/
-/*    color: #494949;*/
-/*    font-family: Inter;*/
-/*    font-size: 20px;*/
-/*    top: 39.5vh;*/
-/*    left: 49vw;*/
-/*}*/
-
-/*body footer div>div:nth-child(2)>nav>ul>li:nth-child(5){*/
-/*    position: absolute;*/
-/*    color: #494949;*/
-/*    font-family: Inter;*/
-/*    font-size: 20px;*/
-/*    top: 47.5vh;*/
-/*    left: 49vw;*/
-/*}*/
-
-/*body footer div>div:nth-child(2)>hr{*/
-/*    position: absolute;*/
-/*    width: 0.001vh;*/
-/*    height: 45vh;*/
-/*    top: 6vh;*/
-/*    right: 31.5vw;*/
-/*}*/
-
-/*body footer div>div:nth-child(3)>h1{*/
-/*    color: #ffffff;*/
-/*    font-family: 'Catamaran';*/
-/*    font-size: 1.5em;*/
-/*    font-style: normal;*/
-/*    font-weight: 700;*/
-/*    line-height: normal;*/
-/*    position: absolute;*/
-/*    margin: auto;*/
-/*    left: 73vw;*/
-/*    top: 7vh;*/
-/*}*/
-
-/*body footer div>div:nth-child(3)>h2{*/
-/*    color: #ffffff;*/
-/*    font-family: 'Catamaran';*/
-/*    font-size: 1em;*/
-/*    width: 23vh;*/
-/*    font-style: normal;*/
-/*    line-height: normal;*/
-/*    position: absolute;*/
-/*    margin: auto;*/
-/*    left: 78vw;*/
-/*    top: 15vh;*/
-/*}*/
-
-/*body footer div>div:nth-child(3)>h3{*/
-/*    color: #ffffff;*/
-/*    font-family: 'Catamaran';*/
-/*    font-size: 1em;*/
-/*    width: 23vh;*/
-/*    font-style: normal;*/
-/*    line-height: normal;*/
-/*    position: absolute;*/
-/*    margin: auto;*/
-/*    left: 78vw;*/
-/*    top: 25vh;*/
-/*}*/
-
-/*body footer div>div:nth-child(3)>h4{*/
-/*    color: #ffffff;*/
-/*    font-family: 'Catamaran';*/
-/*    font-size: 1em;*/
-/*    width: 23vh;*/
-/*    font-style: normal;*/
-/*    line-height: normal;*/
-/*    position: absolute;*/
-/*    margin: auto;*/
-/*    left: 78vw;*/
-/*    top: 35vh;*/
-/*}*/
-
-
-/*#facebooklogo{*/
-/*    width: 3%;*/
-/*    position: absolute;*/
-/*    left: 73.7vw;*/
-/*    top: 15vh;*/
-/*    margin: auto;*/
-/*}*/
-
-/*#instergramlogo{*/
-/*    width: 3%;*/
-/*    position: absolute;*/
-/*    left: 73.7vw;*/
-/*    top: 25vh;*/
-/*    margin: auto;*/
-/*}*/
-
-/*#linkedInlogo{*/
-/*    width: 3%;*/
-/*    position: absolute;*/
-/*    left: 73.7vw;*/
-/*    top: 35vh;*/
-/*    margin: auto;*/
-/*}*/
+.loading > svg {
+    width: 100px;
+    height: 100px;
+    background-size: cover;
+    background-position: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+}
