--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -73,6 +73,18 @@ header>div>img{
 
 /*----------------------------------------home section---------------------------------------------------*/
 
+body{
+    cursor: none;
+    height: 100vh;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    transition: all 0.5s;
+    position: relative;
+    overflow-x: hidden;
+}
+
 body main{
     margin-top: 8vh;
     position: relative;
@@ -2429,4 +2441,20 @@ footer>p {
     right: 0;
     bottom: 0;
     margin: auto;
+}
+
+/*-------------------------------mouse cursor-----------------------------------------------*/
+
+.custom-cursor {
+    width: 15px;
+    height: 15px;
+    border: 3px solid #fac921;
+    border-radius: 50%;
+    position: fixed;
+    pointer-events: none;
+    transform: translate(-50%, -50%);
+    transition: transform 0.15s ease;
+    z-index: 25;
+    top: -8px;
+    left: -8.5px;
 }
