--- a/page/assets/css/style.css
+++ b/page/assets/css/style.css
@@ -1,4 +1,5 @@
 ::-webkit-scrollbar {
+    background-color: #2c3034;
     width: 0.5vw;
 }
 
@@ -7,6 +8,36 @@
 }
 
 
+header{
+    display: inline-flex;
+    border-bottom: 2px solid #fac921;
+    background: #2d2d32;
+    width: 99.9vw;
+    height: 9vh;
+    position: fixed;
+    top: 0;
+    z-index: 10;
+}
+
+header nav>div>menu{
+    position: relative;
+    left: 21vw;
+}
+
+header>div{
+    position: relative;
+    left: 2vw;
+}
+header>div>img{
+    position: relative;
+    width: 49%;
+    left: 6.5vw;
+}
+
+
+main{
+    height: 430vw;
+}
 
 main h1{
     text-align: center;
@@ -15,6 +46,7 @@ main h1{
     font-size: 50px;
     font-style: normal;
     font-weight: 600;
+    margin-top: 7vw;
     line-height: normal;
 }
 
@@ -323,4 +355,168 @@ section:nth-child(22){
     margin-top: -83vh;
     margin-bottom: 7vh;
 }
+
+/*--------------------------------------footer-------------------------------------------------*/
+
+footer {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width: 100%;
+    background: #2d2d32;
+    min-height: 11vw;
+    /* padding: 0vw 3vw; */
+    align-items: center;
+}
+
+.social_icons {
+    width: 20vw;
+    display: flex;
+    justify-content: space-between;
+}
+
+.social_icons>a {
+    text-decoration: none;
+    font-size: 1rem;
+    margin-right: 1rem;
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 3vw;
+    height: 3vw;
+    top: 1vh;
+    background: transparent;
+    border: .2rem solid #fac921;
+    border-radius: 50%;
+    font-size: 2vw;
+    color: #ffffff;
+    z-index: 1;
+    overflow: hidden;
+    transition: .5s;
+    text-decoration: none;
+}
+
+.social_icons>a:hover {
+    color: #342E4AFF;
+    transform: scale(1.15) translateY(-10px);
+}
+
+.social_icons>a::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: #fac921;
+    z-index: -1;
+    transition: .5s;
+}
+
+.social_icons>a:hover::before {
+    width: 100%;
+}
+
+footer>ul {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0;
+    flex-wrap: wrap;
+    list-style: none;
+}
+
+footer>ul>li>a {
+    font-family: 'Poppins', roboto;
+    text-decoration: none;
+    font-size: 1.5em;
+    color: #ffffff;
+    margin: 0 10px;
+    display: inline-block;
+    transition: .5s;
+}
+
+footer .menu li a:hover {
+    transform: translateY(-5px);
+    color: #fac921;
+}
+
+footer>p {
+    font-family: 'Poppins', roboto;
+    color:#ffffff;
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 10px;
+    font-size: 1.1em;
+    letter-spacing: 2px;
+}
+
+.wave {
+    position: absolute;
+    top: -80px;
+    left: 0;
+    width: 100%;
+    height: 80px;
+    background: url(../img/Frame26.png);
+    background-size: 1000px 100px;
+}
+
+#wave1 {
+    z-index: 1000;
+    bottom: 0;
+    animation: animateWave 5s linear infinite;
+}
+
+#wave2 {
+    z-index: 999;
+    opacity: .8;
+    bottom: 0;
+    animation: animateWave2 4s linear infinite;
+}
+
+#wave3 {
+    z-index: 1000;
+    opacity: .2;
+    bottom: 15px;
+    animation: animateWave 3s linear infinite;
+}
+
+#wave4 {
+    z-index: 999;
+    opacity: .7;
+    bottom: 20px;
+    animation: animateWave2 3s linear infinite;
+}
+
+
+@keyframes homeBgText {
+
+    100% {
+        background-position: 1300px 0;
+    }
+}
+
+@keyframes animateWave {
+    0% {
+        background-position-x: 1000px;
+    }
+
+    100% {
+        background-position-x: 0px;
+    }
+}
+
+@keyframes animateWave2 {
+    0% {
+        background-position-x: 0px;
+    }
+
+    100% {
+        background-position-x: 1000px;
+    }
+}
+
+
 
