--- a/page/assets/css/style.css
+++ b/page/assets/css/style.css
@@ -368,6 +368,17 @@ section:nth-child(23){
     margin-bottom: 7vh;
 }
 
+section:nth-child(24){
+    width: 39%;
+    height: 80vh;
+    flex-shrink: 0;
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0px 2px 5px 2px #B8B8B8;
+    margin-left: 53vw;
+    margin-top: -87vh;
+}
+
 /*--------------------------------------footer-------------------------------------------------*/
 
 footer {
