--- a/page/assets/css/style.css
+++ b/page/assets/css/style.css
@@ -36,7 +36,7 @@ header>div>img{
 
 
 main{
-    height: 480vw;
+    height: 510vw;
 }
 
 main h1{
@@ -377,6 +377,18 @@ section:nth-child(24){
     box-shadow: 0px 2px 5px 2px #B8B8B8;
     margin-left: 53vw;
     margin-top: -87vh;
+}
+
+section:nth-child(25){
+    width: 39%;
+    height: 80vh;
+    flex-shrink: 0;
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0px 2px 5px 2px #B8B8B8;
+    margin-left: 8vw;
+    margin-top: 10vh;
+    margin-bottom: 7vh;
 }
 
 /*--------------------------------------footer-------------------------------------------------*/
