--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -476,7 +476,7 @@ body main section:first-child>div:nth-child(3)>div:nth-child(3){
     background-size: cover;
 }
 
-section:nth-child(2)>div>div>div:nth-child(1)>div>div:nth-child(1){
+.expertise>div>div>div:nth-child(1)>div>div:nth-child(1){
     position: absolute;
     top: -2.5vw;
     left: 0;
@@ -485,7 +485,7 @@ section:nth-child(2)>div>div>div:nth-child(1)>div>div:nth-child(1){
     border-radius: 5px 5px 5px 5px;
 }
 
-section:nth-child(2){
+.expertise{
     position: relative;
     height: 70vw;
     width: 70vw;
@@ -493,7 +493,7 @@ section:nth-child(2){
     padding-right: 14vw;
 }
 
-section:nth-child(2)>h5{
+.expertise>h5{
     width: 15vw;
     font-family: 'Signika';
     font-size: 2vw;
@@ -506,7 +506,7 @@ section:nth-child(2)>h5{
     margin: auto;
 }
 
-section:nth-child(2)>h1{
+.expertise>h1{
     width: 42vw;
     font-family: 'Catamaran';
     font-size: 3vw;
@@ -520,7 +520,7 @@ section:nth-child(2)>h1{
     margin: auto;
 }
 
-section:nth-child(2)>p{
+.expertise>p{
     text-align: center;
     width: 62vw;
     font-family: 'Signika';
@@ -733,7 +733,7 @@ section:nth-child(2)>p{
     right: 15vw;
 }
 
-section:nth-child(2)>div:nth-child(8)>img:nth-child(1){
+.expertise>div:nth-child(8)>img:nth-child(1){
     position: absolute;
     height: 28vh;
     width: 10.5vh;
@@ -741,7 +741,7 @@ section:nth-child(2)>div:nth-child(8)>img:nth-child(1){
     left: 22vh;
 }
 
-section:nth-child(2)>div:nth-child(8)>img:nth-child(2){
+.expertise>div:nth-child(8)>img:nth-child(2){
     position: absolute;
     height: 34vh;
     width: 16vh;
