--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,6 +15,7 @@ la{
 /*---------------------------------------header section---------------------------------------------------*/
 *{
     scroll-behavior: smooth;
+
 }
 
 ::-webkit-scrollbar {
@@ -74,8 +75,8 @@ header>div>img{
 /*----------------------------------------home section---------------------------------------------------*/
 
 body{
-    cursor: none;
-    height: 100vh;
+    /*cursor: none;*/
+    /*height: 100vh;*/
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
@@ -1111,167 +1112,197 @@ section:nth-child(5)>img:hover{
 /*/*--------------------------------------Project section-------------------------------------------------*/
 section:nth-child(6){
     position: relative;
-    height: 100vh;
-    width: 71.3vw;
-    padding-left: 14vw;
-    padding-right: 14vw;
+    height: 125vh;
+    width: 100%;
+    /*padding-left: 14vw;*/
+    /*padding-right: 14vw;*/
     overflow: hidden;
     background-color: #2d2d32;
+
 }
 
-section:nth-child(6)>div:nth-child(2)>h1{
-    width: 35vw;
+section:nth-child(6)>h5{
+    margin: 0;
+    top: 4vw;
+    position: absolute;
+    bottom: 0;
     font-family: 'Signika';
-    font-size: 2vw;
-    font-weight: 600;
-    color: #FAC921;
-    position: absolute;
-    top: 11vh;
-    left: 45vw;
-    margin: auto;
-}
-
-section:nth-child(6)>div:nth-child(2)>h2{
-    width: 89vw;
-    font-family: 'Poppins', sans-serif;
-    font-size: 2vw;
-    font-weight: 600;
-    color: #ffffff;
-    position: absolute;
-    top: 35vh;
-    left: 8vw;
-    margin: auto;
-    z-index: 1;
-}
-
-
-section:nth-child(6)>div:nth-child(2)>p{
-    width: 35vw;
-    font-family: 'Poppins', sans-serif;
-    font-size: 1vw;
-    font-weight: 600;
-    color: #ffffff;
-    position: absolute;
-    top: 44vh;
-    left: 8vw;
-    margin: auto;
-    z-index: 1;
-}
-
-#section6Project1{
-    width: 20%;
-    position: absolute;
-    top: 34vh;
-    left: 25vw;
-    margin: auto;
-    opacity: 90%;
-}
-
-#section6Project2{
-    width: 20%;
-    position: absolute;
-    top: 34vh;
-    right: 77vw;
-    margin: auto;
-    opacity: 80%;
-}
-
-#section6Project3{
-    width: 30%;
-    position: absolute;
-    top: 30vh;
-    right: 0vw;
-    left: 25vw;
-    margin: auto;
-}
-
-section:nth-child(6)>div:nth-child(2)>a{
-    position: relative;
-    top: 60vh;
-    color: #FAC921;
-    font-family: 'Signika';
-    font-size: 30px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-}
-
-
-section:nth-child(6)>div:nth-child(4)>i:nth-child(1){
-    font-size: 20px;
-    position: relative;
-    top: 20vw;
-    color: white;
-    right: 11vw;
-}
-
-section:nth-child(6)>div:nth-child(5)>i:nth-child(1){
-    font-size: 20px;
-    position: relative;
-    top: 18.49vw;
-    color: white;
-    left: 81vw;
-}
-
-.Assignment-box {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    width: 15vw;
-    height: 5vw;
-    top: 60vh;
-    left: 0.5vw;
-}
-
-.Assignment-box .btn {
-    text-decoration: none;
-    position: relative;
-    font-family: 'Poppins', roboto;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 10vw;
-    height: 60%;
-    background: #fac921;
-    border: 0.2rem solid #fac921;
-    border-radius: 0.8rem;
-    font-size: 1.3vw;
-    font-weight: 600;
-    letter-spacing: .1rem;
-    color: #2d2d32;
-    z-index: 1;
-    overflow: hidden;
-    transition: .7s;
-}
-
-.Assignment-box .btn:hover {
-    color: #fac921;
-}
-
-
-.Assignment-box .btn:nth-child(2):hover {
-    color: #2d2d32;
-}
-
-.Assignment-box .btn:nth-child(2)::before {
-    background: #fac921;
-}
-
-.Assignment-box .btn::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 100%;
-    background:#2d2d32;
-    z-index: -1;
-    transition: .7s;
-}
-
-.Assignment-box .btn:hover::before {
+    text-align: center;
     width: 100%;
+    height: 75px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #fac921;;
 }
+
+section:nth-child(6)>h5>span{
+    margin: 0;
+    top: 3vw;
+    left: 17vw;
+    position: absolute;
+    font-family: 'Signika';
+    bottom: 0;
+    text-align: center;
+    width: 70%;
+    height: 75px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #F8F7F3;
+}
+
+/*section:nth-child(6)>div:nth-child(2)>h1{*/
+/*    width: 35vw;*/
+/*    font-family: 'Signika';*/
+/*    font-size: 2vw;*/
+/*    font-weight: 600;*/
+/*    color: #FAC921;*/
+/*    position: absolute;*/
+/*    top: 11vh;*/
+/*    left: 45vw;*/
+/*    margin: auto;*/
+/*}*/
+
+/*section:nth-child(6)>div:nth-child(2)>h2{*/
+/*    width: 89vw;*/
+/*    font-family: 'Poppins', sans-serif;*/
+/*    font-size: 2vw;*/
+/*    font-weight: 600;*/
+/*    color: #ffffff;*/
+/*    position: absolute;*/
+/*    top: 35vh;*/
+/*    left: 8vw;*/
+/*    margin: auto;*/
+/*    z-index: 1;*/
+/*}*/
+
+
+/*section:nth-child(6)>div:nth-child(2)>p{*/
+/*    width: 35vw;*/
+/*    font-family: 'Poppins', sans-serif;*/
+/*    font-size: 1vw;*/
+/*    font-weight: 600;*/
+/*    color: #ffffff;*/
+/*    position: absolute;*/
+/*    top: 44vh;*/
+/*    left: 8vw;*/
+/*    margin: auto;*/
+/*    z-index: 1;*/
+/*}*/
+
+/*#section6Project1{*/
+/*    width: 20%;*/
+/*    position: absolute;*/
+/*    top: 34vh;*/
+/*    left: 25vw;*/
+/*    margin: auto;*/
+/*    opacity: 90%;*/
+/*}*/
+
+/*#section6Project2{*/
+/*    width: 20%;*/
+/*    position: absolute;*/
+/*    top: 34vh;*/
+/*    right: 77vw;*/
+/*    margin: auto;*/
+/*    opacity: 80%;*/
+/*}*/
+
+/*#section6Project3{*/
+/*    width: 30%;*/
+/*    position: absolute;*/
+/*    top: 30vh;*/
+/*    right: 0vw;*/
+/*    left: 25vw;*/
+/*    margin: auto;*/
+/*}*/
+
+/*section:nth-child(6)>div:nth-child(2)>a{*/
+/*    position: relative;*/
+/*    top: 60vh;*/
+/*    color: #FAC921;*/
+/*    font-family: 'Signika';*/
+/*    font-size: 30px;*/
+/*    font-style: normal;*/
+/*    font-weight: 700;*/
+/*    line-height: normal;*/
+/*}*/
+
+
+/*section:nth-child(6)>div:nth-child(4)>i:nth-child(1){*/
+/*    font-size: 20px;*/
+/*    position: relative;*/
+/*    top: 20vw;*/
+/*    color: white;*/
+/*    right: 11vw;*/
+/*}*/
+
+/*section:nth-child(6)>div:nth-child(5)>i:nth-child(1){*/
+/*    font-size: 20px;*/
+/*    position: relative;*/
+/*    top: 18.49vw;*/
+/*    color: white;*/
+/*    left: 81vw;*/
+/*}*/
+
+/*.Assignment-box {*/
+/*    position: relative;*/
+/*    display: flex;*/
+/*    justify-content: space-between;*/
+/*    width: 15vw;*/
+/*    height: 5vw;*/
+/*    top: 60vh;*/
+/*    left: 0.5vw;*/
+/*}*/
+
+/*.Assignment-box .btn {*/
+/*    text-decoration: none;*/
+/*    position: relative;*/
+/*    font-family: 'Poppins', roboto;*/
+/*    display: inline-flex;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    width: 10vw;*/
+/*    height: 60%;*/
+/*    background: #fac921;*/
+/*    border: 0.2rem solid #fac921;*/
+/*    border-radius: 0.8rem;*/
+/*    font-size: 1.3vw;*/
+/*    font-weight: 600;*/
+/*    letter-spacing: .1rem;*/
+/*    color: #2d2d32;*/
+/*    z-index: 1;*/
+/*    overflow: hidden;*/
+/*    transition: .7s;*/
+/*}*/
+
+/*.Assignment-box .btn:hover {*/
+/*    color: #fac921;*/
+/*}*/
+
+
+/*.Assignment-box .btn:nth-child(2):hover {*/
+/*    color: #2d2d32;*/
+/*}*/
+
+/*.Assignment-box .btn:nth-child(2)::before {*/
+/*    background: #fac921;*/
+/*}*/
+
+/*.Assignment-box .btn::before {*/
+/*    content: '';*/
+/*    position: absolute;*/
+/*    top: 0;*/
+/*    left: 0;*/
+/*    width: 0;*/
+/*    height: 100%;*/
+/*    background:#2d2d32;*/
+/*    z-index: -1;*/
+/*    transition: .7s;*/
+/*}*/
+
+/*.Assignment-box .btn:hover::before {*/
+/*    width: 100%;*/
+/*}*/
 
 
 /*--------------------------------------Blog section-------------------------------------------------*/
