--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1130,7 +1130,7 @@ section:nth-child(6)>h5{
     text-align: center;
     width: 100%;
     height: 75px;
-    font-size: 20px;
+    font-size: 2vw;
     font-weight: bold;
     color: #fac921;;
 }
@@ -1138,14 +1138,14 @@ section:nth-child(6)>h5{
 section:nth-child(6)>h5>span{
     margin: 0;
     top: 3vw;
-    left: 17vw;
+    left: 25vw;
     position: absolute;
     font-family: 'Signika';
     bottom: 0;
     text-align: center;
-    width: 70%;
+    width: 51%;
     height: 75px;
-    font-size: 20px;
+    font-size: 1.3vw;
     font-weight: bold;
     color: #F8F7F3;
 }
