--- a/assets/css/swipper/style.css
+++ b/assets/css/swipper/style.css
@@ -112,7 +112,7 @@
 
 .swiper-container {
     width: 100%;
-    padding-top: 40vh;
+    padding-top: 30vh;
     padding-bottom: 40px;
     box-sizing: border-box;
 
@@ -121,8 +121,8 @@
 .swiper-slide {
     background-position: center;
     background-size: cover;
-    width: 570px;
-    height: 315px;
+    width: 740px;
+    height: 405px;
 
 }
 
@@ -133,10 +133,10 @@
     position: absolute;
     bottom: 0;
     text-align: center;
-    width: 100%;
-    height: 75px;
+    width: 50%;
+    height: 70px;
     background: rgba(0, 0, 0, 0.685);
-    font-size: 20px;
+    font-size: 1.3vw;
     font-weight: bold;
     color: #F8F7F3;
 
@@ -161,7 +161,7 @@ button {
     letter-spacing: 0.1rem;
     font-size: 1rem;
     padding: 10px 25px;
-    top: 18.9vw;
+    top: 18.5vw;
     left: 31vw;
     transition: 0.2s;
 }
