--- a/assets/css/Responsive1024px/section1.css
+++ b/assets/css/Responsive1024px/section1.css
@@ -165,6 +165,33 @@
         width: 30vw;
     }
 
+    section:nth-child(6) {
+        height: 70vh;
+    }
+
+    section:nth-child(6)>h5 {
+        font-size: 2.5vw;
+    }
+
+    section:nth-child(6)>h5>span {
+        top: 4vw;
+        font-size: 1.3vw;
+    }
+
+    .swiper-container {
+        padding-top: 23vh;
+    }
+
+    .info h5 {
+        width: 45%;
+        font-size: 1.3vw;
+    }
+
+    button {
+        top: 15.5vw;
+        left: 28vw;
+    }
+
 
 
 
