--- a/assets/css/Responsive580px/section6.css
+++ b/assets/css/Responsive580px/section6.css
@@ -85,7 +85,7 @@
         font-size: 3vw;
     }
 
-    button {
+    .projectBtn {
         font-size: 7px;
         top: 37.5vw;
         left: 65vw;
