--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2206,14 +2206,62 @@ section:nth-child(8)>h1{
 
 }
 
-.contact-section aside>form>fieldset>button{
-    width: 185px;
-    height: 47px;
-    flex-shrink: 0;
-    border-radius: 25px;
-    background-color: #fac921;
+.contactBtn {
+    font-family: 'Signika';
+    font-size: 15px;
+    width: 150px;
+    height: 3vw;
+    background: #2d2d32;
     color: white;
+    padding: 0.7em 1em;
+    padding-left: 0.9em;
+    display: flex;
+    align-items: center;
+    border: none;
+    border-radius: 16px;
+    overflow: hidden;
+    transition: all 0.2s;
 }
+
+.contactBtn span {
+    display: block;
+    margin-left: 0.3em;
+    transition: all 0.3s ease-in-out;
+}
+
+.contactBtn svg {
+    display: block;
+    transform-origin: center center;
+    transition: transform 0.3s ease-in-out;
+}
+
+.contactBtn:hover .svg-wrapper {
+    animation: fly-1 0.6s ease-in-out infinite alternate;
+}
+
+.contactBtn:hover svg {
+    transform: translateX(1.2em) rotate(45deg) scale(1.1);
+}
+
+.contactBtn:hover span {
+    transform: translateX(10em);
+}
+
+.contactBtn:active {
+    transform: scale(0.95);
+}
+
+@keyframes fly-1 {
+    from {
+        transform: translateY(0.1em);
+    }
+
+    to {
+        transform: translateY(-0.1em);
+    }
+}
+
+
 
 /*.contact-btn-box .btn{*/
 /*    text-decoration: none;*/
