--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -75,8 +75,8 @@ header>div>img{
 /*----------------------------------------home section---------------------------------------------------*/
 
 body{
-    /*cursor: none;*/
-    /*height: 100vh;*/
+    cursor: none;
+    height: 100vh;
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
@@ -2575,7 +2575,6 @@ footer>p {
     position: fixed;
     pointer-events: none;
     transform: translate(-50%, -50%);
-    transition: transform 0.15s ease;
     z-index: 25;
     top: -8px;
     left: -8.5px;
